<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/principalFragment">
    <fragment
        android:id="@+id/principalFragment"
        android:name="pe.idat.appinstituto.view.fragments.PrincipalFragment"
        android:label="@string/titulofragmentprincipal"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/notasFragment"
        android:name="pe.idat.appinstituto.view.fragments.NotasFragment"
        android:label="@string/titulofragmentnotas"
        tools:layout="@layout/fragment_notas" />
    <fragment
        android:id="@+id/reservaFragment"
        android:name="pe.idat.appinstituto.view.fragments.ReservaFragment"
        android:label="@string/titulofragmentreserva"
        tools:layout="@layout/fragment_reserva" />
    <fragment
        android:id="@+id/asistenciaFragment"
        android:name="pe.idat.appinstituto.view.fragments.AsistenciaFragment"
        android:label="@string/titulofragmentasistencia"
        tools:layout="@layout/fragment_asistencia" />
    <action
        android:id="@+id/action_asistenciaFragment_to_justificacionFragment"
        app:destination="@id/justificacionFragment">
        <argument
            android:name="idAsistencia"
            app:argType="string" />
    </action>
    <fragment
        android:id="@+id/justificacionFragment"
        android:name="pe.idat.appinstituto.view.fragments.JustificacionFragment"
        android:label="@string/titulofragmentjustificacion"
        tools:layout="@layout/fragment_justificacion" />


</navigation>